--- a/myreader-frontend/src/app/js/entry/entry.css
+++ b/myreader-frontend/src/app/js/entry/entry.css
@@ -1,5 +1,10 @@
 .my-entry {
-    padding: 16px 0;
+    padding: 16px 16px;
+    margin: 0 -16px;
+}
+
+.my-entry--focus {
+    background-color: rgba(158, 158, 158, 0.2);
 }
 
 .my-entry__header {
