--- a/myreader-frontend/src/app/js/shared/component/buttons/icon-button/icon-button.component.html
+++ b/myreader-frontend/src/app/js/shared/component/buttons/icon-button/icon-button.component.html
@@ -1,3 +1,3 @@
-<button type="button" class="my-icon-button">
+<button type="button" class="my-icon-button-deprecated">
     <react-component name="Icon" props="$ctrl.props"></react-component>
 </button>
