--- a/myreader-frontend/src/app/js/navigation/subscriptions-item/subscriptions-item.component.html
+++ b/myreader-frontend/src/app/js/navigation/subscriptions-item/subscriptions-item.component.html
@@ -1,13 +1,12 @@
-<my-navigation-subscription-item
-        ng-repeat="item in $ctrl.subscriptionsGroupedByTag track by $ctrl.trackBy(item)"
-        my-item="item"
-        my-query="$ctrl.router.query"
-        my-on-select="$ctrl.onSelect(query)">
-</my-navigation-subscription-item>
+<react-component
+        name="SubscriptionNavigationItem"
+        props="$ctrl.props(item)"
+        ng-repeat="item in $ctrl.subscriptionsGroupedByTag track by $ctrl.trackBy(item)">
+</react-component>
 
-<my-navigation-subscription-item
-        ng-repeat="item in $ctrl.subscriptionsWithoutTag track by $ctrl.trackBy(item)"
-        my-item="item"
-        my-query="$ctrl.router.query"
-        my-on-select="$ctrl.onSelect(query)">
-</my-navigation-subscription-item>
+<react-component
+        name="SubscriptionNavigationItem"
+        props="$ctrl.props(item)"
+        ng-repeat="item in $ctrl.subscriptionsWithoutTag track by $ctrl.trackBy(item)">
+</react-component>
+
