Introduce logout route.

--- a/myreader-frontend/src/app/js/navigation/navigation.component.html
+++ b/myreader-frontend/src/app/js/navigation/navigation.component.html
@@ -18,7 +18,7 @@
         <span>Add subscription</span>
     </li>
 
-    <li class="my-navigation__item my-navigation__item--red" ng-click="$ctrl.logout()">
+    <li class="my-navigation__item my-navigation__item--red" ng-click="$ctrl.routeTo(['logout'])">
         <span>Logout</span>
     </li>
 </ul>
@@ -31,7 +31,7 @@
         <span>Feeds</span>
     </li>
 
-    <li class="my-navigation__item my-navigation__item--red" ng-click="$ctrl.logout()">
+    <li class="my-navigation__item my-navigation__item--red" ng-click="$ctrl.routeTo(['logout'])">
         <span>Logout</span>
     </li>
 </ul>
