--- a/myreader-frontend/src/app/js/components/Badge/Badge.css
+++ b/myreader-frontend/src/app/js/components/Badge/Badge.css
@@ -1,19 +1,33 @@
 .my-badge {
+    --red: 200;
+    --green: 60;
+    --blue: 255;
+    --threshold: 0.6;
+
     display: inline-block;
     padding: 0 6px;
 }
 
+/*
+ * https://css-tricks.com/switch-font-color-for-different-backgrounds-with-css/
+ */
 .my-badge > span {
+    --r: calc(var(--red) * 0.2126);
+    --g: calc(var(--green) * 0.7152);
+    --b: calc(var(--blue) * 0.0722);
+    --sum: calc(var(--r) + var(--g) + var(--b));
+    --perceived-lightness: calc(var(--sum) / 255);
+
+    background: rgb(var(--red), var(--green), var(--blue));
+    border-radius: 10px;
+    color: hsl(0, 0%, calc((var(--perceived-lightness) - var(--threshold)) * -10000000%));
     display: inline-block;
     min-width: 10px;
-    padding: 3px 7px;
     font-size: 12px;
     font-weight: 700;
     line-height: 1;
-    color: #fff;
+    padding: 3px 7px;
     text-align: center;
-    white-space: nowrap;
     vertical-align: middle;
-    background-color: #777;
-    border-radius: 10px;
+    white-space: nowrap;
 }
