Introduce subscription tag entity.

--- a/myreader-frontend/src/app/js/subscription/subscription.component.html
+++ b/myreader-frontend/src/app/js/subscription/subscription.component.html
@@ -10,7 +10,7 @@
 
     <my-autocomplete-input my-label="'Tag'"
                            my-disabled="$ctrl.pendingAction"
-                           my-selected-item="$ctrl.subscription.tag"
+                           my-selected-item="$ctrl.subscription.feedTag.name"
                            my-values="$ctrl.tags"
                            my-on-select="$ctrl.onSelectTag(value)">
     </my-autocomplete-input>
