Update badge color according to prop "color". Add function prop "onClick" to badge component.

--- a/myreader-frontend/src/app/js/components/Badge/Badge.css
+++ b/myreader-frontend/src/app/js/components/Badge/Badge.css
@@ -8,6 +8,10 @@
     padding: 0 6px;
 }
 
+.my-badge--clickable {
+    cursor: pointer;
+}
+
 /*
  * https://css-tricks.com/switch-font-color-for-different-backgrounds-with-css/
  */
