--- a/myreader-frontend/src/app/js/shared/component/list-page/list-page.component.html
+++ b/myreader-frontend/src/app/js/shared/component/list-page/list-page.component.html
@@ -6,7 +6,7 @@
 
     <ng-transclude ng-transclude-slot="action-panel"></ng-transclude>
 
-    <my-icon-button my-type="refresh"
+    <my-icon-button my-type="redo"
                     ng-click="$ctrl.onRefresh()">
     </my-icon-button>
 </div>
