Replace deprecated icon button component in list page component.

--- a/myreader-frontend/src/app/js/shared/component/list-page/list-page.component.html
+++ b/myreader-frontend/src/app/js/shared/component/list-page/list-page.component.html
@@ -6,9 +6,7 @@
 
     <ng-transclude ng-transclude-slot="action-panel"></ng-transclude>
 
-    <my-icon-button my-type="redo"
-                    ng-click="$ctrl.onRefresh()">
-    </my-icon-button>
+    <react-component name="IconButton" props="$ctrl.refreshProps"></react-component>
 </div>
 
 <div class="my-list-page__list-panel">
