Replace deprecated icon component in search-input component.

--- a/myreader-frontend/src/app/js/shared/component/search-input/search-input.component.css
+++ b/myreader-frontend/src/app/js/shared/component/search-input/search-input.component.css
@@ -1,9 +1,10 @@
 my-search-input {
+    align-items: center;
     display: flex;
 }
 
 .my-search-input__search-icon {
-    cursor: initial;
+    color: grey;
     margin-left: 10px;
     margin-right: 5px;
 }
