--- a/myreader-frontend/src/app/js/shared/component/search-input/search-input.component.html
+++ b/myreader-frontend/src/app/js/shared/component/search-input/search-input.component.html
@@ -1,4 +1,7 @@
-<my-icon class="my-search-input__search-icon" my-type="search"></my-icon>
+<react-component name="Icon"
+                 props="$ctrl.iconProps"
+                 class="my-search-input__search-icon">
+</react-component>
 
 <react-component class="my-search-input__container"
                  name="SearchInput"
