--- a/myreader-frontend/src/app/js/feed/feed.component.html
+++ b/myreader-frontend/src/app/js/feed/feed.component.html
@@ -6,7 +6,7 @@
             <react-component name="FeedUrlInput" props="$ctrl.urlProps"></react-component>
 
             <a ng-href="{{$ctrl.feed.url}}" target="_blank" rel="noopener noreferrer">
-                <my-icon my-type="open-in-new"></my-icon>
+                <react-component name="Icon" props="$ctrl.iconProps"></react-component>
             </a>
         </div>
 
