--- a/myreader-frontend/src/app/js/maintenance/about/about.component.html
+++ b/myreader-frontend/src/app/js/maintenance/about/about.component.html
@@ -15,6 +15,8 @@
     </tr>
     <tr>
         <td>Build Time</td>
-        <td>{{$ctrl.applicationInfo.buildTime | timeago}}</td>
+        <td>
+            <react-component name="TimeAgo" props="$ctrl.buildTimeProp"></react-component>
+        </td>
     </tr>
 </table>
