Replace deprecated timeago filter in feed list component.

--- a/myreader-frontend/src/app/js/feed/feed-list.component.html
+++ b/myreader-frontend/src/app/js/feed/feed-list.component.html
@@ -10,7 +10,9 @@
                                  props="$ctrl.iconProps"
                                  ng-if="feed.hasErrors">
                 </react-component>
-                {{::feed.createdAt | timeago}}
+                <react-component name="TimeAgo"
+                                 props="$ctrl.createdAtProp(feed)">
+                </react-component>
             </span>
         </div>
     </my-list-panel>
