--- a/myreader-frontend/src/app/js/components/Buttons/Button/Button.css
+++ b/myreader-frontend/src/app/js/components/Buttons/Button/Button.css
@@ -29,3 +29,8 @@
     cursor: default;
     background-color: rgba(0, 0, 0, 0.12);
 }
+
+.my-button.my-button--primary {
+    color: rgba(255, 255, 255, 0.87);
+    background-color: rgb(63, 81, 181);
+}
