Migrate feed fetch error component to React.

--- a/myreader-frontend/src/app/js/feed/feed.component.html
+++ b/myreader-frontend/src/app/js/feed/feed.component.html
@@ -26,5 +26,5 @@
     </form>
 
     <h2 class="admin-feed-form__fetch-error-title">Fetch errors</h2>
-    <my-feed-fetch-error></my-feed-fetch-error>
+    <react-component name="FeedFetchErrors" props="$ctrl.feedFetchErrorsProp"></react-component>
 </div>
