--- a/myreader-frontend/src/app/js/components/Feed/FeedFetchErrors/FeedFetchErrors.css
+++ b/myreader-frontend/src/app/js/components/Feed/FeedFetchErrors/FeedFetchErrors.css
@@ -1,9 +1,14 @@
-.feed-fetch-error__item {
+.my-feed-fetch-errors {
+    display: flex;
+    flex-direction: column;
+}
+
+.my-feed-fetch-errors__item {
     border-bottom: 1px solid rgba(0, 0, 0, 0.12);
     padding: 11px 0;
 }
 
-.feed-fetch-error__item > span {
+.my-feed-fetch-errors__item > span {
     color: rgba(0, 0, 0, 0.54);
     display: block;
     font-size: 14px;
@@ -11,4 +16,8 @@
     letter-spacing: 0.01em;
     line-height: 1.6em;
     margin: 0;
+}
+
+.my-feed-fetch-errors__load-more > span {
+    width: 100%;
 }
