--- a/myreader-frontend/src/app/js/components/SearchInput/SearchInput.css
+++ b/myreader-frontend/src/app/js/components/SearchInput/SearchInput.css
@@ -1,15 +1,14 @@
-my-search-input {
+.my-search-input {
     align-items: center;
     display: flex;
 }
 
-.my-search-input__search-icon {
+.my-search-input > svg {
     color: grey;
-    margin-left: 10px;
     margin-right: 5px;
 }
 
-.my-search-input__container {
+.my-search-input__input {
     flex-grow: 1;
     margin: 0;
 }
