--- a/myreader-frontend/src/app/js/shared/component/list-page/list-page.component.html
+++ b/myreader-frontend/src/app/js/shared/component/list-page/list-page.component.html
@@ -1,8 +1,8 @@
 <div class="my-list-page__action-panel">
-    <my-search-input class="my-list-page__search-action"
-                     my-value="$ctrl.router.query.q"
-                     my-on-change="$ctrl.onSearchChange(value)">
-    </my-search-input>
+    <react-component class="my-list-page__search-action"
+                     name="SearchInput"
+                     props="$ctrl.searchInputProps">
+    </react-component>
 
     <ng-transclude ng-transclude-slot="action-panel"></ng-transclude>
 
