Migrate toast component to React.

--- a/myreader-frontend/src/app/js/app.component.html
+++ b/myreader-frontend/src/app/js/app.component.html
@@ -13,5 +13,5 @@
     <main class="app__main" ui-view="content"></main>
 </div>
 
-<my-toast></my-toast>
+<react-component name="ContainerComponentBridge" props="$ctrl.toastProps"></react-component>
 <my-backdrop></my-backdrop>
