--- a/myreader-frontend/src/app/js/components/SubscriptionList/SubscriptionList.css
+++ b/myreader-frontend/src/app/js/components/SubscriptionList/SubscriptionList.css
@@ -1,10 +1,14 @@
-.subscription-list__item {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
-    cursor: pointer;
-    padding: 16px;
+.my-subscription-list {
+    padding: 0 16px;
 }
 
-.subscription-list__item > h3 {
+.my-subscription-list__item {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+    cursor: pointer;
+    padding: 16px 0;
+}
+
+.my-subscription-list__item > h3 {
     font-size: 16px;
     font-weight: 400;
     letter-spacing: 0.01em;
@@ -15,7 +19,7 @@
     white-space: nowrap;
 }
 
-.subscription-list__item > span {
+.my-subscription-list__item > span {
     color: rgba(0, 0, 0, 0.54);
     font-size: 14px;
     font-weight: 500;
