--- a/myreader-frontend/src/app/js/components/FeedListPage/FeedList/FeedList.css
+++ b/myreader-frontend/src/app/js/components/FeedListPage/FeedList/FeedList.css
@@ -1,10 +1,14 @@
-.feed-list__item {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
-    cursor: pointer;
-    padding: 16px;
+.my-feed-list {
+    padding: 0 16px;
 }
 
-.feed-list__item > h3 {
+.my-feed-list__item {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+    cursor: pointer;
+    padding: 16px 0;
+}
+
+.my-feed-list__item > h3 {
     font-size: 16px;
     font-weight: 400;
     letter-spacing: 0.01em;
@@ -15,11 +19,15 @@
     white-space: nowrap;
 }
 
-.feed-list__item > span {
+.my-feed-list__item > span {
     color: rgba(0, 0, 0, 0.54);
     font-size: 14px;
     font-weight: 500;
     letter-spacing: 0.01em;
     line-height: 1.6em;
     margin: 0;
+}
+
+.my-feed-list__item > span > svg {
+    padding-right: 5px;
 }
