--- a/myreader-frontend/src/app/js/components/Buttons/Button/Button.css
+++ b/myreader-frontend/src/app/js/components/Buttons/Button/Button.css
@@ -25,12 +25,17 @@
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 }
 
-.my-button[disabled] {
-    cursor: default;
-    background-color: rgba(0, 0, 0, 0.12);
-}
-
 .my-button.my-button--primary {
     color: rgba(255, 255, 255, 0.87);
     background-color: rgb(63, 81, 181);
+}
+
+.my-button.my-button--caution {
+    color: rgba(255, 255, 255, 0.87);
+    background-color: rgb(255, 87, 34);
+}
+
+.my-button[disabled] {
+    cursor: default;
+    background-color: rgba(0, 0, 0, 0.12);
 }
