Migrate backdrop component to React.

--- a/myreader-frontend/src/app/js/app.component.html
+++ b/myreader-frontend/src/app/js/app.component.html
@@ -17,4 +17,5 @@
 </div>
 
 <react-component name="ContainerComponentBridge" props="$ctrl.toastProps"></react-component>
-<my-backdrop></my-backdrop>
+<react-component name="ContainerComponentBridge" props="$ctrl.backdropProps"></react-component>
+
