--- a/myreader-frontend/src/app/js/pages/LoginPage/LoginPage.css
+++ b/myreader-frontend/src/app/js/pages/LoginPage/LoginPage.css
@@ -1,15 +1,20 @@
-.my-login {
+.my-login-page {
+    align-items: center;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     margin-top: 100px;
+}
+
+.my-login-page > .my-input {
     width: 300px;
 }
 
-.my-login__message {
+.my-login-page__message {
     height: 30px;
 }
 
-.my-login__message > span {
+.my-login-page__message > span {
     display: block;
     color: rgb(255, 87, 34);
     text-align: center;
