--- a/myreader-frontend/src/app/js/app.component.css
+++ b/myreader-frontend/src/app/js/app.component.css
@@ -14,6 +14,10 @@ my-app {
         "nav    main";
 }
 
+.app > react-component {
+    display: contents;
+}
+
 @media (max-width: 1279px) {
     .app {
         grid-template-areas:
@@ -21,35 +25,6 @@ my-app {
             "nav    main";
         grid-template-columns: 0 1fr;
     }
-}
-
-.app__header {
-    grid-area: header;
-    background-color: rgb(63, 81, 181);
-    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
-    z-index: 20;
-    display: flex;
-    align-items: center;
-}
-
-.app__nav {
-    grid-area: nav;
-    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
-    background-color: white;
-    z-index: 30;
-    display: flex;
-    flex-direction: column;
-    overflow: auto;
-    width: 100%;
-    min-height: 0;
-}
-
-.app__nav--animate {
-    transition: 0.3s ease-in-out;
-}
-
-.app__nav--open {
-    width: 320px;
 }
 
 .app__main {
