Replace last bits of Angular with React.

--- a/myreader-frontend/src/app/css/mobile.css
+++ b/myreader-frontend/src/app/css/mobile.css
@@ -37,6 +37,8 @@ input {
     vertical-align: baseline;
 }
 
-.my-container-component-bridge {
+#root {
+    display: flex;
+    flex-direction: row;
     width: 100%;
 }
