--- a/myreader-frontend/src/app/js/pages/LoginPage/LoginPage.css
+++ b/myreader-frontend/src/app/js/pages/LoginPage/LoginPage.css
@@ -2,8 +2,8 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     margin-top: 100px;
+    width: 100%;
 }
 
 .my-login-page > .my-input {
