--- a/myreader-frontend/src/app/css/mobile.css
+++ b/myreader-frontend/src/app/css/mobile.css
@@ -49,3 +49,25 @@ input {
 .mt-4 {
     margin-top: 1rem;
 }
+
+/*
+ Reference: https://tailwindcss.com/docs/display/
+ */
+.flex {
+    display: flex;
+}
+
+/*
+ Reference: https://tailwindcss.com/docs/width/
+ */
+.w-full {
+    width: 100%;
+}
+
+/*
+ Reference: https://tailwindcss.com/docs/text-style/
+ */
+
+.no-underline {
+    text-decoration: none;
+}
