--- a/myreader-frontend/src/app/js/components/FeedList/FeedList.css
+++ b/myreader-frontend/src/app/js/components/FeedList/FeedList.css
@@ -8,12 +8,9 @@
     padding: 16px 0;
 }
 
-.my-feed-list__item > h3 {
-    font-size: 16px;
-    font-weight: 400;
+.my-feed-list__item-heading {
+    color: #000000;
     letter-spacing: 0.01em;
-    line-height: 1.2em;
-    margin: 0;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
