Migrate to react-router.

--- a/myreader-frontend/src/app/js/components/Chips/Chip.css
+++ b/myreader-frontend/src/app/js/components/Chips/Chip.css
@@ -10,6 +10,11 @@
     user-select: none;
 }
 
+.my-chip * {
+    color: inherit;
+    text-decoration: inherit;
+}
+
 .my-chip--selectable {
     cursor: pointer;
 }
